# YAXKIN-Nuclear

./: .gitignore  CMakeLists.txt  README.md
docs/: DEVELOPER_GUIDE.md  LOGBOOK.md
docs/research/: Theory.docx
src/core/engine/: ReactorCore.cpp  Test.cpp  main  main.cpp
src/core/include/: Constants.hpp  ReactorCore.hpp
